# gnu_sendooway

./: AUTHORS  INSTALL  Makefile.am  README  TODO  configure.ac
etc/: sendooway.conf
man/: sendooway.conf.man  sendooway.man
src/: Makefile.am  auth.c  auth.h  client.c  client.h  daemon.c  daemon.h  glue.c  glue.h  options.c  options.h  proxy.c  proxy.h  sendooway.c  sendooway.h  server.c  server.h  smtp.c  smtp.h  util.c  util.h
test/: Makefile.am  common.sh  conftest.sh  inputtest.sh  runtest.sh  smtptest.sh
